Added files via upload

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,206 @@
-/* Main Stylesheet */
+/* Main Stylesheet
+* index.css
+*/
+
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC:700,400);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:700,400);
 
 /* Global */
 
-
 body {
-  background:#B7D8CD;
-  
+  background: url("http://static1.squarespace.com/static/55366670e4b0d66efb17e2f1/t/555963b7e4b00de931f57b64/1431921591433/boo2.png");
 }
-img {
-  width: 50%;
+
+
+/* Structure or Layout */
+
+main {
+  margin: 0 auto;
+  width: 90%;
 }
+
 
 /*Typography */
 
-/* Homepage */
+
+/* Navigation */
+
+
+/* Nav */
+
+.logo h1 {
+  margin: 0 auto;
+  color: #74A588;
+  font-size: 6em;
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+}
+
+nav {
+  background-color: bisque;
+  position: relative;
+}
+
+nav ul {
+  padding-top: 1px;
+}
+
+nav li {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1em;
+  list-style: none;
+  display: inline-block;
+  text-align: center;
+  width: 32%;
+  background-color: bisque;
+  padding: 5px;
+}
+
+nav a:link,
+nav a:visited {
+  color: #2D358E;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: white;
+}
+
+
+/* Bio */
+
+section {
+  position: relative;
+  display: block;
+  float: left;
+}
+
+section img {
+    border-radius: 8px;
+    background: bisque;
+    padding: 1em 1em 1em 1em;
+    margin-left: 10px;
+}
+
+#Home p {
+  border-radius: 5px;
+  width: 638px;
+  line-height: 30px;
+  position: absolute;
+  background: bisque;
+}
 
 /* Resume */
+
+#Resume {
+ text-align:center;
+    display: inline;
+    padding: 25px;
+    width: 982px;
+    background: bisque;
+    color: #4DB398;
+    margin: 0 0 0 2em;
+    font-family: 'Quicksand', sans-serif;
+}
+.education{
+    width: 100%;
+}
+.experince {
+    color:bisque;
+    border-radius: 5px;
+    padding: 29px;
+    width: 907px;
+    background: #74A588;
+    display: inline;
+    margin-right: 20px;
+    text-align: center;
+}
+
+.skills ul {
+  width: 900px;
+}
+
+.skills li {
+  font-size: 50px;
+  list-style: none;
+  font-weight: bold;
+  color:bisque;
+  
+} 
+
+.adobe{
+  overflow: auto;
+  background: #4DB398;
+  padding: 30px;
+  display: inline-block;
+  text-align: center;
+ width: 63px;
+}
+
+
+/* Portfolio */
+.thumbnail {
+  display: inline-block;
+  width: 300px;
+  height: 180px;
+  margin: 0 15px 6px 0;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.thumbnail img {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  cursor: pointer;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.thumbnail .title {
+  position: absolute;
+  left: 0;
+  top: 40%;
+  width: 100%;
+  cursor: pointer;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.thumbnail:hover {
+  z-index: 999;
+  -webkit-transform: scale(1.1) rotate(0.1deg);
+  -moz-transform: scale(1.1) rotate(0.1deg);
+  transform: scale(1.1) rotate(0.1deg);
+  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.5);
+}
+.thumbnail:hover .title {
+  -webkit-transform: scale(0.85) rotate(0.1deg);
+  -moz-transform: scale(0.85) rotate(0.1deg);
+  transform: scale(0.85) rotate(0.1deg);
+  color: rgba(255, 255, 255, 0);
+}
+.thumbnail:hover img {
+  opacity: 1;
+  -webkit-filter: blur(0);
+  -moz-filter: blur(0);
+  filter: blur(0);
+}
+.thumbnail:active {
+  -webkit-transform: scale(1.08) rotate(0.1deg);
+  -moz-transform: scale(1.08) rotate(0.1deg);
+  transform: scale(1.08) rotate(0.1deg);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.7);
+}
